@@ -1001,8 +1001,19 @@ parseURL2(char *url, ParsedURL *pu, ParsedURL *current)
 	}
 	return;
     }
-    if (pu->scheme == SCM_LOCAL)
-	pu->file = file_quote(expandName(file_unquote(pu->file)));
+    if (pu->scheme == SCM_LOCAL) {
+	char *q = expandName(file_unquote(pu->file));
+#ifdef SUPPORT_DOS_DRIVE_PREFIX
+	Str drive;
+	if (IS_ALPHA(q[0]) && q[1] == ':') {
+	    drive = Strnew_charp_n(q, 2);
+	    Strcat_charp(drive, file_quote(q+2));
+	    pu->file = drive->ptr;
+	}
+	else
+#endif
+	    pu->file = file_quote(q);
+    }
 
     if (current && (pu->scheme == current->scheme ||
 		    (pu->scheme == SCM_FTP && current->scheme == SCM_FTPDIR) ||
