@@ -1,3 +1,8 @@
+2003-12-09  WATANABE Katsuyuki <knabe@sannet.ne.jp>
+
+	* [w3m-dev 04024] fix: drive letter
+	* url.c (parseURL2): fix for SUPPORT_DOS_DRIVE_PREFIX
+
 2003-12-09  YONETANI Tomokazu <qhwt@myrealbox.com>
 
 	* [w3m-dev 04022] $^
